[gd_scene load_steps=10 format=3 uid="uid://cy3360w1huhbk"]

[ext_resource type="Script" path="res://player/player.gd" id="1_qsbr3"]
[ext_resource type="Shader" path="res://player/blackColor.gdshader" id="2_xkfg0"]
[ext_resource type="Texture2D" uid="uid://dhsg81blpidss" path="res://assets/soldier.png" id="3_0dfmb"]
[ext_resource type="Texture2D" uid="uid://cxaj02b7kmw4j" path="res://assets/light.png" id="3_q5vek"]
[ext_resource type="PackedScene" uid="uid://bm6effwt4a5pp" path="res://gun_controller.tscn" id="4_d4y0g"]
[ext_resource type="PackedScene" uid="uid://vpbs6vjemmyl" path="res://stats.tscn" id="5_i4alc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quy2g"]
size = Vector2(27, 24)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mrq82"]
shader = ExtResource("2_xkfg0")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7f4r"]
size = Vector2(29, 26)

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
slide_on_ceiling = false
safe_margin = 0.1
script = ExtResource("1_qsbr3")
MAX_SPEED = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_quy2g")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.972549, 0.941176, 0.533333, 1)
self_modulate = Color(0.972549, 0.941176, 0.533333, 1)
material = SubResource("ShaderMaterial_mrq82")
position = Vector2(0, -5.96046e-08)
scale = Vector2(0.136, 0.150235)
texture = ExtResource("3_0dfmb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_n7f4r")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.643137, 0.905882, 0.466667, 1)
shadow_enabled = true
texture = ExtResource("3_q5vek")
texture_scale = 1.2

[node name="WeaponMountPoint" type="Marker2D" parent="."]
position = Vector2(15, 8)

[node name="GunController" parent="." instance=ExtResource("4_d4y0g")]

[node name="Stats" parent="." instance=ExtResource("5_i4alc")]
MAX_HP = 10

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.1, 0.1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
